Updated color scheme, more styling

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Josefin+Sans:300i,400" rel="stylesheet">
   <title>Tracko - An inventory and sales tracker</title>
 </head>
 
